
2007-01-28  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added "html { height: 100% }" to stylesheet to make RTE wizard work in IE7

2007-01-24  Dmitry Dulepov  <dmitry@typo3.org>

	* Added `useCDATA` to a list of t3lib_div::array2xml() options to produce CDATA instead of entities

2007-01-26  Oliver Hader  <oh@inpublica.de>

	* Fixed bug 4814: Umlauts error in AJAX Pagetree
	* Updated prototype.js to version 1.5.0
	* Updated script.aculo.us to version 1.7.0
	* Created new directory for external contributions typo3/contrib/ and moved files:
		- typo3/prototype.js	-> typo3/contrib/prototype/prototype.js
		- typo3/scriptaculous/*	-> typo3/contrib/scriptaculous/*
		- typo3/json.php		-> typo3/contrib/json.php
	* Changed paths to typo3/contrib in affected core files

2007-01-25  Ingmar Schlecht  <ingmar@typo3.org>

	* Added backwards compatibility to Pagetree for non AJAX-capable browsers (by Benjamin Mack)

2007-01-24  Michael Stucki  <michael@typo3.org>

	* Install Tool: Network 192.168.0.0/255.255.0.0 was allowed to enter the Install Tool regardless of the die() presence in typo3/install/index.php. This exception has been removed, only 127.0.0.1 may now enter the Install Tool regardless of any other conditions.
	* !!! Install Tool: Instead of modifying typo3/install/index.php to enable the Install Tool, a new file "typo3conf/ENABLE_INSTALL_TOOL" can be created to enable it. Shared hosting servers: If you want to turn this off, you have to change the condition in typo3/install/index.php, line 50. See comment above.
	* Removed access for 192.168.0.0/255.255.0.0 in misc/phpcheck/incfile.php

2007-01-24  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug 4846: EM: inconsistent line ending

2007-01-24  Oliver Hader  <oh@inpublica.de>

	* Fixed bug 4820: IRRE - Wrong character encoding in AJAX response
	* Fixed feature request 4790: typolink.addQueryString - enable usage of merged POST and GET data
	* Fixed bug 4824: typo3 not defined in jsfunc.tbe_editor.js